tests/parse-fail/pointer_missing_pointee.fl
pub mod pointer_missing_pointee {
    pub struct PointerMissingPointee {
        pub a : *;
    }
}
